tests/test_proof/good/duration.catala_en
## Test

```catala
declaration scope A:
  context x content duration
  context y content boolean

scope A:
  definition x equals 94 day
  definition y under condition (x + x) > 100 day consequence equals true
  definition y under condition (x + x) <= 100 day consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/good/duration.catala_en:6.11-6.12:
└─┐
6 │   context y content boolean
  │           ‾
  └─ Test
[RESULT] No errors found during the proof mode run.
```
